**8.1.0 (unreleased)**

* Exclude the wheel package from the `pip freeze` output (like pip and setuptools).
  :issue:`2989`.

* Allow installing modules from a subdirectory of a vcs repository
  in non-editable mode (:issue:`3217`, :pull:`3466`).

* Make pip wheel and pip download work with vcs urls with subdirectory option
  (:pull:`3466`).


**8.0.3 (2016-02-25)**

* Make ``install --quiet`` really quiet. See :issue:`3418`.

* Fix a bug when removing packages in python 3: disable INI-style parsing of the
  entry_point.txt file to allow entry point names with colons (:pull:`3434`)

* Normalize generated script files path in RECORD files. (:pull:`3448`)

* Fix bug introduced in 8.0.0 where subcommand output was not shown,
  even when the user specified ``-v`` / ``--verbose``. :issue:`3486`.

* Enable python -W with respect to PipDeprecationWarning. (:pull:`3455`)

* Upgrade distlib to 0.2.2 (fix :issue:`3467`):

  * Improved support for Jython when quoting executables in output scripts.


**8.0.2 (2016-01-21)**

* Stop attempting to trust the system CA trust store because it's extremely
  common for them to be broken, often in incompatible ways. See :pull:`3416`.


**8.0.1 (2016-01-21)**

* Detect CAPaths in addition to CAFiles on platforms that provide them.

* Installing argparse or wsgiref will no longer warn or error - pip will allow
  the installation even though it may be useless (since the installed thing
  will be shadowed by the standard library).

* Upgrading a distutils installed item that is installed outside of a virtual
  environment, while inside of a virtual environment will no longer warn or
  error.

* Fix a bug where pre-releases were showing up in ``pip list --outdated``
  without the ``--pre`` flag.

* Switch the SOABI emulation from using RuntimeWarnings to debug logging.

* Rollback the removal of the ability to uninstall distutils installed items
  until a future date.


**8.0.0 (2016-01-19)**
