@@ -703,15 +703,15 @@ def call_subprocess(cmd, show_stdout=True, cwd=None,
             spinner.finish("done")
     if proc.returncode:
         if on_returncode == 'raise':
-            if logger.getEffectiveLevel() > std_logging.DEBUG:
-                if not show_stdout:
-                    logger.info(
-                        'Complete output from command %s:', command_desc,
-                    )
-                    logger.info(
-                        ''.join(all_output) +
-                        '\n----------------------------------------'
-                    )
+            if (logger.getEffectiveLevel() > std_logging.DEBUG and
+                    not show_stdout):
+                logger.info(
+                    'Complete output from command %s:', command_desc,
+                )
+                logger.info(
+                    ''.join(all_output) +
+                    '\n----------------------------------------'
+                )
             raise InstallationError(
                 'Command "%s" failed with error code %s in %s'
                 % (command_desc, proc.returncode, cwd))
